Build service inscription

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.application.name=service-inscription
+server.port=8000
+
+spring.datasource.url=jdbc:mysql://localhost:3306/service_inscription
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+
+filiere.service.url=http://localhost:8001
+etudient.service.url=http://localhost:8002
+
 
