--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=service-inscription
-server.port=8000
+server.port=8082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/service_inscription
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,7 +7,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
-filiere.service.url=http://localhost:8001
-etudient.service.url=http://localhost:8002
+etudient.service.url=http://localhost:8081
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
